{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 62,
  "lineage": "d1db715d-4587-efe3-65e7-6707627ce1b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020591658655:security-group/sg-0396953f9b7e79939",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0396953f9b7e79939",
            "ingress": [],
            "name": "security group 1",
            "name_prefix": "",
            "owner_id": "020591658655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3c38cd45"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020591658655:security-group/sg-021ce1a9ffcd8d734",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-021ce1a9ffcd8d734",
            "ingress": [],
            "name": "security group 2",
            "name_prefix": "",
            "owner_id": "020591658655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3c38cd45"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020591658655:security-group/sg-0b2a21ce22794e122",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b2a21ce22794e122",
            "ingress": [],
            "name": "security group 3",
            "name_prefix": "",
            "owner_id": "020591658655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3c38cd45"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1289823525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0396953f9b7e79939",
            "security_group_rule_id": "sgr-015a4e75fb36c4389",
            "self": false,
            "source_security_group_id": "sg-021ce1a9ffcd8d734",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1644152167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0396953f9b7e79939",
            "security_group_rule_id": "sgr-035a5d169c01d87f6",
            "self": false,
            "source_security_group_id": "sg-021ce1a9ffcd8d734",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3972336084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021ce1a9ffcd8d734",
            "security_group_rule_id": "sgr-0f471e6b1986ecdfc",
            "self": false,
            "source_security_group_id": "sg-0396953f9b7e79939",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1815453658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021ce1a9ffcd8d734",
            "security_group_rule_id": "sgr-07a562a5b0c988499",
            "self": false,
            "source_security_group_id": "sg-0396953f9b7e79939",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3871872779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0396953f9b7e79939",
            "security_group_rule_id": "sgr-06fe9b3b21ba66097",
            "self": false,
            "source_security_group_id": "sg-0b2a21ce22794e122",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3419862857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0396953f9b7e79939",
            "security_group_rule_id": "sgr-0304f7e0c6ffcc248",
            "self": false,
            "source_security_group_id": "sg-0b2a21ce22794e122",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-367060083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2a21ce22794e122",
            "security_group_rule_id": "sgr-09c1d0d3e70728cca",
            "self": false,
            "source_security_group_id": "sg-0396953f9b7e79939",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-612273276",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2a21ce22794e122",
            "security_group_rule_id": "sgr-0b4e2f9767dfdee7b",
            "self": false,
            "source_security_group_id": "sg-0396953f9b7e79939",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-4166946291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021ce1a9ffcd8d734",
            "security_group_rule_id": "sgr-03ef094a02f822601",
            "self": false,
            "source_security_group_id": "sg-0b2a21ce22794e122",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2024676349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021ce1a9ffcd8d734",
            "security_group_rule_id": "sgr-0d677bff19838d75d",
            "self": false,
            "source_security_group_id": "sg-0b2a21ce22794e122",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2874299002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2a21ce22794e122",
            "security_group_rule_id": "sgr-05274fda05381f548",
            "self": false,
            "source_security_group_id": "sg-021ce1a9ffcd8d734",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2597075573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2a21ce22794e122",
            "security_group_rule_id": "sgr-0a445a16d5467add6",
            "self": false,
            "source_security_group_id": "sg-021ce1a9ffcd8d734",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    }
  ]
}